[tool.poetry]
name = "flox-rules"
version = "0.1.0"
description = "Apply common rules on your flox managed projects"
homepage = "https://github.com/getflox/flox-rules"
authors = ["Michal Przytulski <michal@przytulski.pl>", "Daniel Ancuta <whisller@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
plumbum = "^1.6.8"

[tool.poetry.dev-dependencies]

[tool.poetry.plugins."flox.plugin"]
rules = "flox_rules:plugin"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
